--- a/LyndenFlood_COMP304Sec001_Lab04/app/src/main/res/values/strings.xml
+++ b/LyndenFlood_COMP304Sec001_Lab04/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">LyndenFlood_COMP304Sec001_Lab04</string>
+    <string name="app_name">Barcelona Travel Guide</string>
 </resources>
